--- a/ui/diagnoseReportApp/translations/zh-CN.yaml
+++ b/ui/diagnoseReportApp/translations/zh-CN.yaml
@@ -5,7 +5,7 @@ diagnosis:
   expand: 展开
   fold: 收起
   tables:
-    Category:
+    category:
       header: 标头
       diagnose: 诊断
       load: 负载
@@ -15,7 +15,7 @@ diagnosis:
       TiKV: TiKV
       config: 配置
       error: 报错
-    Title:
+    title:
       generate_report_error: 生成报告的报错
       report_time_range: 报告时间范围
       diagnose: 诊断结果
@@ -64,23 +64,22 @@ diagnosis:
       top_10_slow_query: Top10 慢查询
       top_10_slow_query_group_by_digest: 按 SQL 指纹聚合的 TOP10 慢查询
       slow_query_with_diff_plan: 不同执行计划的慢查询
-    Comment:
-      '':
-      diagnose_comment: 该表显示的是自动诊断的结果，即集群中出现的问题。
-      total_time_consume_comment: 该表显示的是 TiDB/TiKV/PD 所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，如：实例，事件类型等，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME(所有时间的 TIME_RATIO 为 1)，上事件的TIME_RATIO为1;TOTAL_TIME是该事件的总花费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
-      total_error_comment: 该表显示的是错误的数量。METRIC_NAME 是错误事件名称，LABEL 是事件标签，例如实例，事件类型…，TOTAL_COUNT 是该错误事件的总数。
-      tidb_time_consume_comment: 该表显示的是 TiDB 的所消耗的时间。表中显示的是 TiDB/TiKV/PD 的事件所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，如：实例，事件类型等，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME，所有事件的 TIME_RATIO 为 1，TOTAL_TIME 是该事件的总花费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
-      transaction_comment: 该表显示了 TiDB 的事务统计信息。METRIC_NAME 是对象名，LABEL是对象标签，例如实例，事件类型…，TOTAL_VALUE 是该对象的总大小，TOTAL_COUNT 是该对象的总计数，P999为0.999分位数的最大值，P99是0.99分位数的最大值，P90是0.90分位数的最大值，P80是0.80分位数的最大值。
-      tidb_connection_count_comment: tidb 服务器的连接计数。
-      ddl_owner_comment: DDL Owner 的信息。注意：如果没有DDL请求被执行，下面的 Owner 信息可能为空，这并不表示DDL Owner 不存在。
-      scheduler_initial_config_comment: PD 调度器的初始配置值。初始时间是报表的开始时间。
-      scheduler_change_config_comment: PD 调度器的配置更改历史。APPROXIMATE_CHANGE_TIME 为最小的有效启动时间。
-      tidb_gc_initial_config_comment: TiDB GC 的初始配置值。初始时间是报表的开始时间。
-      tidb_gc_change_config_comment: TiDB GC 的配置更改历史。
-      tikv_rocksdb_initial_config_comment: TiKV RocksDB 的初始配置值。初始时间是报表的开始时间。
-      tikv_rocksdb_change_config_comment: TiKV RocksDB 的配置更改历史。
-      tikv_raftstore_initial_config_comment: TiKV RaftStore 的初始配置值。初始时间是报表的开始时间。
-      tikv_raftstore_change_config_comment: TiKV RaftStore 的配置更改历史。
-      pd_time_consume_comment: 该表显示的是 PD 中的事件所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，例如实例，事件类型…，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME，所有事件总的 TIME_RATIO 为 1，TOTAL_TIME 是该事件的总耗费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间 ，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
-      tikv_engine_size_comment: 每个 TiKV 实例的存储大小。
-      tikv_time_consume_comment: 该表显示的是 TiKV 中的事件所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，例如实例，事件类型…，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME，所有事件总的 TIME_RATIO 为 1，TOTAL_TIME 是该事件的总耗费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间 ，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
+    comment:
+      diagnose: 该表显示的是自动诊断的结果，即集群中出现的问题。
+      total_time_consume: 该表显示的是 TiDB/TiKV/PD 所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，如：实例，事件类型等，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME(所有时间的 TIME_RATIO 为 1)，上事件的TIME_RATIO为1;TOTAL_TIME是该事件的总花费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
+      total_error: 该表显示的是错误的数量。METRIC_NAME 是错误事件名称，LABEL 是事件标签，例如实例，事件类型…，TOTAL_COUNT 是该错误事件的总数。
+      tidb_time_consume: 该表显示的是 TiDB 的所消耗的时间。表中显示的是 TiDB/TiKV/PD 的事件所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，如：实例，事件类型等，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME，所有事件的 TIME_RATIO 为 1，TOTAL_TIME 是该事件的总花费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
+      transaction: 该表显示了 TiDB 的事务统计信息。METRIC_NAME 是对象名，LABEL是对象标签，例如实例，事件类型…，TOTAL_VALUE 是该对象的总大小，TOTAL_COUNT 是该对象的总计数，P999为0.999分位数的最大值，P99是0.99分位数的最大值，P90是0.90分位数的最大值，P80是0.80分位数的最大值。
+      tidb_connection_count: tidb 服务器的连接计数。
+      ddl_owner: DDL Owner 的信息。注意：如果没有DDL请求被执行，下面的 Owner 信息可能为空，这并不表示DDL Owner 不存在。
+      scheduler_initial_config: PD 调度器的初始配置值。初始时间是报表的开始时间。
+      scheduler_change_config: PD 调度器的配置更改历史。APPROXIMATE_CHANGE_TIME 为最小的有效启动时间。
+      tidb_gc_initial_config: TiDB GC 的初始配置值。初始时间是报表的开始时间。
+      tidb_gc_change_config: TiDB GC 的配置更改历史。
+      tikv_rocksdb_initial_config: TiKV RocksDB 的初始配置值。初始时间是报表的开始时间。
+      tikv_rocksdb_change_config: TiKV RocksDB 的配置更改历史。
+      tikv_raftstore_initial_config: TiKV RaftStore 的初始配置值。初始时间是报表的开始时间。
+      tikv_raftstore_change_config: TiKV RaftStore 的配置更改历史。
+      pd_time_consume: 该表显示的是 PD 中的事件所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，例如实例，事件类型…，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME，所有事件总的 TIME_RATIO 为 1，TOTAL_TIME 是该事件的总耗费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间 ，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
+      tikv_engine_size: 每个 TiKV 实例的存储大小。
+      tikv_time_consume: 该表显示的是 TiKV 中的事件所消耗的时间。METRIC_NAME 是事件名称，LABEL 是事件标签，例如实例，事件类型…，TIME_RATIO 是该事件的 TOTAL_TIME 除以所有事件的 TOTAL_TIME，所有事件总的 TIME_RATIO 为 1，TOTAL_TIME 是该事件的总耗费时间，TOTAL_COUNT 是该事件的总计数，P999 是 0.999 分位数的最大时间 ，P99 是 0.99 分位数的最大时间，P90 是 0.90 分位数的最大时间，P80 是 0.80 分位数的最大时间。
