--- a/ui/lib/apps/ClusterInfo/translations/zh-CN.yaml
+++ b/ui/lib/apps/ClusterInfo/translations/zh-CN.yaml
@@ -25,11 +25,12 @@ cluster_info:
       columns:
         ip: 机器地址
         cpu: CPU
-        cpu_usage: CPU 使用
+        cpu_usage: CPU 使用率
         memory: 物理内存
-        memory_usage: 内存使用
+        memory_usage: 内存使用率
         deploy: 部署磁盘
         disk_size: 磁盘容量
-        disk_usage: 磁盘使用
+        disk_usage: 磁盘使用率
+      instanceUnavailable: 这个节点上的实例不可用
   error:
     load: '加载组件 {{comp}} 失败: {{cause}}'
