--- a/ui/lib/apps/Statement/translations/zh-CN.yaml
+++ b/ui/lib/apps/Statement/translations/zh-CN.yaml
@@ -32,5 +32,22 @@ statement:
   plan:
     plans: 执行计划
   tooltip:
-    settings: 设置
     refresh: 刷新
+  setting:
+    title: 设置
+    disabled_desc_title: 该功能未启用
+    disabled_desc_line_1: SQL 语句分析功能未启用，因此无法查看历史记录。
+    disabled_desc_line_2: 您可以修改设置打开该功能后等待新数据收集。
+    open_setting: 打开设置
+    close_statement: 关闭 SQL 语句分析功能
+    close_statement_warning: 确认要关闭该功能吗？关闭后现有历史记录也将被清空！
+    switch: 总开关
+    refresh_interval: 数据收集周期
+    keep_duration: 数据保留时间
+  actions:
+    save: 保存
+    close: 关闭
+    cancel: 取消
+  time:
+    min: 分钟
+    day: 天
