--- a/ui/lib/apps/ClusterInfo/translations/zh-CN.yaml
+++ b/ui/lib/apps/ClusterInfo/translations/zh-CN.yaml
@@ -21,9 +21,9 @@ cluster_info:
         unknown: 未知
         unreachable: 无法访问
     host_table:
-      title: 节点
+      title: 主机
       columns:
-        ip: 机器地址
+        ip: 主机地址
         cpu: CPU
         cpu_usage: CPU 使用率
         memory: 物理内存
@@ -31,6 +31,6 @@ cluster_info:
         deploy: 部署磁盘
         disk_size: 磁盘容量
         disk_usage: 磁盘使用率
-      instanceUnavailable: 这个节点上的实例不可用
+      instanceUnavailable: 获取该主机信息失败：无法访问实例
   error:
     load: '加载组件 {{comp}} 失败: {{cause}}'
