--- a/ui/lib/apps/Statement/translations/zh-CN.yaml
+++ b/ui/lib/apps/Statement/translations/zh-CN.yaml
@@ -6,6 +6,7 @@ statement:
     select_time: 选择时间段
     select_schemas: 选择数据库
     select_stmt_types: 选择 SQL 类型
+    select_columns: 选择列
   common:
     schema: 数据库
     schemas: 数据库
@@ -24,6 +25,7 @@ statement:
     avg_mem_tooltip: 单个 SQL 语句的平均消耗内存
     sum_backoff_times: Backoff 重试次数
     avg_total_keys: 平均扫描行数
+    show_full_sql: 显示完整的 SQL
   detail:
     node: 节点
     time_range: 时间段
