--- a/ui/lib/apps/Statement/translations/en.yaml
+++ b/ui/lib/apps/Statement/translations/en.yaml
@@ -12,17 +12,17 @@ statement:
     schemas: Schemas
     schemas_tooltip: SQL statement related schemas
     digest_text: SQL
-    digest_text_tooltip: SQL Digest
+    digest_text_tooltip: SQL template, same kind SQLs with different parameters have the same template
     sum_latency: Sum Latency
-    sum_latency_tooltip: Total time consuming for single SQL statement
-    exec_count: Exec Count
-    exec_count_tooltip: Total execution times for single SQL statement
+    sum_latency_tooltip: Total time consuming for this kind SQL statement
+    exec_count: Execution Count
+    exec_count_tooltip: Total execution times for this kind SQL statement
     avg_affected_rows: Avg Affected Rows
     avg_latency: Avg Latency
-    avg_latency_tooltip: Average time consuming for single SQL statement
+    avg_latency_tooltip: Average time consuming for a single SQL statement
     max_latency: Max Latency
     avg_mem: Avg Cost Memory
-    avg_mem_tooltip: Average memory consuming for signle SQL statement
+    avg_mem_tooltip: Average memory consuming for a signle SQL statement
     sum_backoff_times: Sum Backoff Times
     avg_total_keys: Avg Scan Rows
     show_full_sql: Show Full SQL
