[ADD] Show GitHash in frontend.
Signed-off-by: mapleFU <1506118561@qq.com>

--- a/ui/src/apps/clusterInfo/translations/en.yaml
+++ b/ui/src/apps/clusterInfo/translations/en.yaml
@@ -9,6 +9,7 @@ cluster_info:
         status: Status
         up_time: Up Time
         deploy_path: Deploy Directory
+        git_hash: Git Hash
       actions:
         hide_db:
           tooltip: Hide
