--- a/ui/lib/apps/Statement/translations/en.yaml
+++ b/ui/lib/apps/Statement/translations/en.yaml
@@ -7,21 +7,22 @@ statement:
     select_schemas: Select schemas
     select_stmt_types: Select SQL types
   common:
+    columns:
+      plan_digest: Plan Digest
+      plan_digest_tooltip: Different plans have different plan digest
+      digest_text: SQL Digest
+      digest_text_tooltip: Similar SQLs with different query parameters have same SQL digest
+      sum_latency: Total Latency
+      sum_latency_tooltip: Total execution duration for all SQL statements in this kind
+      exec_count: Execution Count
+      exec_count_tooltip: Total number of execution times for all SQL statements in this kind
+      avg_latency: Mean Latency
+      avg_latency_tooltip: Execution duration of single SQL statement
+      avg_mem: Mean Memory
+      avg_mem_tooltip: Consumed memory of single SQL statement
     schema: Schema
     schemas: Schemas
-    schemas_tooltip: SQL statement related schemas
-    digest_text: SQL
-    digest_text_tooltip: SQL Digest
-    sum_latency: Sum Latency
-    sum_latency_tooltip: Total time consuming for single SQL statement
-    exec_count: Exec Count
-    exec_count_tooltip: Total execution times for single SQL statement
-    avg_affected_rows: Avg Affected Rows
-    avg_latency: Avg Latency
-    avg_latency_tooltip: Average time consuming for single SQL statement
-    max_latency: Max Latency
-    avg_mem: Avg Cost Memory
-    avg_mem_tooltip: Average memory consuming for signle SQL statement
+    schemas_tooltip: Related schema names
     sum_backoff_times: Sum Backoff Times
     avg_total_keys: Avg Scan Rows
   detail:
