statement: Support settings (#359)

--- a/ui/lib/apps/Statement/translations/en.yaml
+++ b/ui/lib/apps/Statement/translations/en.yaml
@@ -32,3 +32,20 @@ statement:
     last_seen: Last Seen
   plan:
     plans: Plans
+  tooltip:
+    refresh: Refresh
+  setting:
+    title: Settings
+    disabled_desc_title: This Feature Is Not Open
+    disabled_desc_line_1: SQL statements feature is not open, we can't view history records.
+    disabled_desc_line_2: You can change the setting to open it and wait for the new records.
+    open_setting: Open Setting
+    close_statement: Close SQL statements
+    close_statement_warning: Are you sure to close this feature? All history records will be cleared after closing it!
+    switch: Open Statements
+    refresh_interval: Data Collect Interval
+    keep_duration: Data Keep Duration
+  actions:
+    save: Save
+    close: Close
+    cancel: Cancel
