--- a/ui/lib/apps/Statement/translations/en.yaml
+++ b/ui/lib/apps/Statement/translations/en.yaml
@@ -51,3 +51,7 @@ statement:
     save: Save
     close: Close
     cancel: Cancel
+  time_range_selector:
+    recent: Recent
+    usual_time_ranges: Usual Time Ranges
+    custom_time_ranges: Custom Time Ranges
