--- a/ui/lib/apps/Diagnose/translations/zh-CN.yaml
+++ b/ui/lib/apps/Diagnose/translations/zh-CN.yaml
@@ -1,12 +1,12 @@
 diagnose:
   nav_title: 集群诊断
   generate:
-    title: 生成诊断报告
+    title: 开始集群诊断
     range_begin: 区间起始时间
     range_duration: 区间长度
     is_compare: 与基线区间对比
     compare_range_begin: 基线区间起始时间
-    submit: 生成报告
+    submit: 开始诊断
   status:
     head:
       title: 诊断状态
