--- a/ui/lib/apps/Diagnose/translations/en.yaml
+++ b/ui/lib/apps/Diagnose/translations/en.yaml
@@ -1,12 +1,12 @@
 diagnose:
   nav_title: Cluster Diagnose
   generate:
-    title: New Diagnose Report
+    title: Start Diagnose Cluster
     range_begin: Range Start Time
     range_duration: Range Duration
     is_compare: Compare by Baseline
     compare_range_begin: Baseline Range Start Time
-    submit: Generate
+    submit: Start Diagnose
   status:
     head:
       title: Diagnose Status
