--- a/ui/lib/apps/Diagnose/translations/en.yaml
+++ b/ui/lib/apps/Diagnose/translations/en.yaml
@@ -1,12 +1,21 @@
 diagnose:
   nav_title: Cluster Diagnose
   generate:
-    title: New Diagnose Report
+    title: Start Diagnose Cluster
     range_begin: Range Start Time
     range_duration: Range Duration
     is_compare: Compare by Baseline
     compare_range_begin: Baseline Range Start Time
-    submit: Generate
+    submit: Start Diagnose
+  list_table:
+    diagnose_create_time: Diagnosis Create Time
+    status: Status
+    status_running: Diagnosing
+    status_finish: Finish
+    diagnose_start_time: Diagnosis Start Time
+    diagnose_end_time: Diagnosis End Time
+    compare_start_time: Comparison Start Time
+    compare_end_time: Comparison End Time
   status:
     head:
       title: Diagnose Status
@@ -17,8 +26,4 @@ diagnose:
     baseline_begin: Baseline Range Start Time
     progress: Progress
   time_duration:
-    min: min
-    min_with_count: '{{count}} min'
-    hour_with_count: '{{count}} hour'
-    day_with_count: '{{count}} day'
     custom: Custom
